# serenade

./: .env.example  pyproject.toml
src/: bot.py  resolver.py
src/clients/: spotify_scraper.py  youtube.py  ytmusic.py
src/models/: __init__.py  track.py
src/music/: player.py  queue.py
src/ui/: embeds.py
